width alignment correction

--- a/intro/css/css-flexbox-grid.css
+++ b/intro/css/css-flexbox-grid.css
@@ -1,11 +1,10 @@
 .container {
-    max-width: 1000px;
+    max-width: 1900px;
     display: grid;
     grid-template-rows: auto 1fr auto;
     height: 100vh;
     gap: 10px;
     justify-content: center;
-    align-items: center;
   }
   
   header {
@@ -16,6 +15,8 @@
     font-family: arial;
     color:white;
     max-width: 800px;
+    justify-content: center;
+    align-items: center;
   }
   
   main {
